Use Docker Image and Create .env
Use docker image davigsilva/jigsaw-blog latest,
then remove dockerfile in git repository.
Create the .env-example file with the app port.
App port env used in docker-compose.yml and config.php.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ version: "3"
 
 services:
   blog:
-    build: .
+    image: davigsilva/jigsaw-blog
     ports:
-      - 127.0.0.1:8000:8000
+      - 127.0.0.1:${APP_PORT}:${APP_PORT}
     volumes:
       - ./:/app
     working_dir: /app
